# Leetcode-Hobby-Dream-Machine

10. Regular Expression Matching/: main.cpp
100. Same Tree/: main.py
101. Symmetric Tree/: main.py
104. Maximum Depth of a Binary Tree/: main.py
1071. Greatest Common Divisor of Strings/: main.cpp
108. Convert Sorted Array To Binary Search Tree/: main.py
110. Balanced Tree/: main.py
111. Minimum Depth of Binary Tree/: main.py
112. Path Sum/: main.py
1137. N-th Tribonacci Number/: main.cpp
118. Pascals Triangle/: main.py
119. Pascals triangle II/: main.py
121. Best Time to Buy Stock/: main.py
125. Valid Palindrome/: main.py
13. Roman to Int/: main.py
131. Palindrome Partitioning/: main.cpp
136. Single Number/: main.py
14. Longest Common Prefix/: main.py
141. Linked List Cycle/: main.py
144. Binary Tree Preorder Traversal/: main.py
145. Binary Tree Postorder Traversal/: main.py
1470. Shuffle the array/: main.cpp
160. Intersection of Two Linked Lists/: main.py
1626. Best Team With No Conflicts/: main.cpp
168. Excel Sheet Column Title/: main.py
169. Majority Element/: main.py
171. Excel Sheet Column Number/: main.py
190. Reverse Bits/: main.py
191. Number of 1 bits/: main.py
2. Add two numbers/: main.py
202. Happy Number/: main.py
203. Remove Linked List Elements/: main.py
205. Isomorphic Strings/: main.py
206. Reverse Linked List/: main.py
217. Contains Duplicates/: main.py
219. Contains Dupllicates 2/: main.py
2246. Longest Path With Different Adjacent Characters/: main.cpp
225. Implementing Stack Using Queues/: main.py
226. Invert Binary Tree/: main.py
2279. Maximum Bags With Full Capacity of Rocks/: main.cpp
228. Summary Ranges/: main.py
231. Power Of Two/: main.py
232. Implement Queue using Stacks/: main.py
234. Palindrome Linked List/: main.py
235. Lowest Common Ancestor of a Binary Search Tree/: main.py
242. Valid Anagram/: main.py
257. Binary Tree Paths/: main.py
258. Add Digits/: main.py
263. Ugly Number/: main.py
268. Missing Number/: main.py
278. First Bad Version/: main.py
283. Move Zeros/: main.py
290. Word Pattern/: main.py
292. Nim Game/: main.py
3. Longest Substring Without Repeating Characters/: main.cpp
303. Range Sum Query - Immutable/: main.py
309. Best time to buy and sell stock with cooldown/: main.cpp
326. Power of Three/: main.py
328. Odd Even Linked List/: main.cpp
338. Counting Bits/: main.py
342. Power of Four/: main.py
344. Reverse String/: main.py
345. Reverse Vowels of a String/: main.py
349. Intersection of Two Arrays/: main.py
35. Search Insert Position/: main.py
350. Intersection of Two Arrays II/: main.py
36. Valid Sudoku/: main.py
367. Valid Perfect Square/: main.py
374. Guess Number Higher or Lower/: main.py
383. Ransom Note/: main.py
387. First Unique Character in a String/: main.py
389. Find the Difference/: main.py
392. Is Subsequence/: main.py
4. Median of 2 sorted arrays/: main.cpp
401. Binary Watch/: main.py
404. Sum of Left Leaves/: main.py
405. Convert a Number to Hexadecimal/: main.py
409. Longest Palindrome/: main.py
412. Fizz Buzz/: main.py
414. Third Maximum Number/: main.py
434. Number of Segments in a String/: main.py
441. Arranging coins/: main.py
448. Find all Numbers disappeared in Array/: main.py
45. Jump Game 2/: main.cpp
455. Assign cookies/: main.py
459. Repeated Substring Pattern/: main.py
460. LFU Cache/: main.cpp
461. Hamming Distance/: main.py
463. Island Perimeter/: main.py
476. Number complement/: main.py
482. License Key Formatting/: main.py
485. Max Consecutive Ones/: main.py
492. Construct The Rectangle/: main.py
495. Teemo Attacking/: main.py
496. Next Greatest Number/: main.py
500. Keyboard Row/: main.py
501. Find Mode in Binary Search Tree/: main.py
504. Base Seven/: CMakeLists.txt  main.cpp
506. Relative Ranks/: CMakeLists.txt  main.cpp
507. Perfect Number/: CMakeLists.txt  (+1 more)
Christmas Special/: CMakeLists.txt  Offline Q's  input.txt  main.cpp
Christmas Special/Day 1/Puzzle 1/: CMakeLists.txt  main.cpp
Christmas Special/Day 1/Puzzle 2/: main.cpp
Christmas Special/Day 11/Puzzle 2/: main.cpp
Christmas Special/Day 2/Puzzle 1/: main.cpp
Christmas Special/Day 2/Puzzle 2/: main.cpp
Christmas Special/Day 3/Puzzle 1/: main.cpp
Christmas Special/Day 3/Puzzle 2/: main.cpp
Christmas Special/Day 4/Puzzle 1/: main.cpp
Christmas Special/Day 4/Puzzle 2/: main.cpp
Christmas Special/Day 5/Puzzle 1/: main.cpp
Christmas Special/Day 5/Puzzle 2/: main.cpp
Christmas Special/Day 6/Puzzle 1/: main.cpp
Christmas Special/Day 7/Puzzle 1/: main.cpp
Christmas Special/Day 7/Puzzle 2/: main.cpp
Christmas Special/Day 8/Puzzle 1/: main.cpp
Christmas Special/Day 9/Puzzle 1/: main.cpp
(+73 files in other folders)
