cmake_minimum_required(VERSION 3.23)
project(Christmas_Special)

set(CMAKE_CXX_STANDARD 14)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/input.txt
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(Christmas_Special main.cpp)

add_executable(Day_1_Puzzle_1 "Day 1/Puzzle 1/main.cpp")
add_executable(Day_1_Puzzle_2 "Day 1/Puzzle 2/main.cpp")

add_executable(Day_2_Puzzle_1 "Day 2/Puzzle 1/main.cpp")
add_executable(Day_2_Puzzle_2 "Day 2/Puzzle 2/main.cpp")

add_executable(Day_3_Puzzle_1 "Day 3/Puzzle 1/main.cpp")
add_executable(Day_3_Puzzle_2 "Day 3/Puzzle 2/main.cpp")

add_executable(Day_4_Puzzle_1 "Day 4/Puzzle 1/main.cpp")
add_executable(Day_4_Puzzle_2 "Day 4/Puzzle 2/main.cpp")

add_executable(Day_5_Puzzle_1 "Day 5/Puzzle 1/main.cpp")
add_executable(Day_5_Puzzle_2 "Day 5/Puzzle 2/main.cpp")

add_executable(Day_6_Puzzle_1 "Day 6/Puzzle 1/main.cpp")
add_executable(Day_6_Puzzle_2 "Day 6/Puzzle 2/main.cpp")

add_executable(Day_7_Puzzle_1 "Day 7/Puzzle 1/main.cpp")
add_executable(Day_7_Puzzle_2 "Day 7/Puzzle 2/main.cpp")

add_executable(Day_8_Puzzle_1 "Day 8/Puzzle 1/main.cpp")
add_executable(Day_8_Puzzle_2 "Day 8/Puzzle 2/main.cpp")

add_executable(Day_9_Puzzle_1 "Day 9/Puzzle 1/main.cpp")
add_executable(Day_9_Puzzle_2 "Day 9/Puzzle 2/main.cpp")

add_executable(Day_10_Puzzle_1 "Day 10/Puzzle 1/main.cpp")
add_executable(Day_10_Puzzle_2 "Day 10/Puzzle 2/main.cpp")

add_executable(Day_11_Puzzle_1 "Day 11/Puzzle 1/main.cpp")
add_executable(Day_11_Puzzle_2 "Day 11/Puzzle 2/main.cpp")

add_executable(Day_12_Puzzle_1 "Day 12/Puzzle 1/main.cpp")
add_executable(Day_12_Puzzle_2 "Day 12/Puzzle 2/main.cpp")

add_executable(Day_13_Puzzle_1 "Day 13/Puzzle 1/main.cpp")
add_executable(Day_13_Puzzle_2 "Day 13/Puzzle 2/main.cpp")

add_executable(Day_14_Puzzle_1 "Day 14/Puzzle 1/main.cpp")
add_executable(Day_14_Puzzle_2 "Day 14/Puzzle 2/main.cpp")

add_executable(Day_15_Puzzle_1 "Day 15/Puzzle 1/main.cpp")
add_executable(Day_15_Puzzle_2 "Day 15/Puzzle 2/main.cpp")

add_executable(Day_16_Puzzle_1 "Day 16/Puzzle 1/main.cpp")
add_executable(Day_16_Puzzle_2 "Day 16/Puzzle 2/main.cpp")

add_executable(Day_17_Puzzle_1 "Day 17/Puzzle 1/main.cpp")
add_executable(Day_17_Puzzle_2 "Day 17/Puzzle 2/main.cpp")

add_executable(Day_18_Puzzle_1 "Day 18/Puzzle 1/main.cpp")
add_executable(Day_18_Puzzle_2 "Day 18/Puzzle 2/main.cpp")

add_executable(Day_19_Puzzle_1 "Day 19/Puzzle 1/main.cpp")
add_executable(Day_19_Puzzle_2 "Day 19/Puzzle 2/main.cpp")

add_executable(Day_20_Puzzle_1 "Day 20/Puzzle 1/main.cpp")
add_executable(Day_20_Puzzle_2 "Day 20/Puzzle 2/main.cpp")

add_executable(Day_21_Puzzle_1 "Day 21/Puzzle 1/main.cpp")
add_executable(Day_21_Puzzle_2 "Day 21/Puzzle 2/main.cpp")

add_executable(Day_22_Puzzle_1 "Day 22/Puzzle 1/main.cpp")
add_executable(Day_22_Puzzle_2 "Day 22/Puzzle 2/main.cpp")

add_executable(Day_23_Puzzle_1 "Day 23/Puzzle 1/main.cpp")
add_executable(Day_23_Puzzle_2 "Day 23/Puzzle 2/main.cpp")

add_executable(Day_24_Puzzle_1 "Day 24/Puzzle 1/main.cpp")
add_executable(Day_24_Puzzle_2 "Day 24/Puzzle 2/main.cpp")

add_executable(Day_25_Puzzle_1 "Day 25/Puzzle 1/main.cpp")
add_executable(Day_25_Puzzle_2 "Day 25/Puzzle 2/main.cpp")